--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-jest": "^22.4.1",
     "jest": "^24.7.1",
     "jest-runner-eslint": "^0.7.3",
-    "shopware-api-client": "^1.6.0"
+    "shopware-api-client": "^1.6.0",
+    "winston": "^3.2.1"
   },
   "jest": {
     "projects": [{
